# folio

./: .credo.exs  .gitignore  .gitmodules  .rustler.toml  CHANGELOG.md  DESIGN.md  LICENSE.md  README.md  checksum-Elixir.Folio.Native.exs  mix.exs  rustq.exs
.github/workflows/: ci.yml  release.yml
examples/: documents.exs  layout.exs  publishing.exs  shapes.exs  tweet_invoice.exs  works.bib
examples/output/: TWEET.md
lib/: folio.ex
lib/folio/: compile_error.ex  content.ex  document.ex  dsl.ex  native.ex  parse_error.ex  show.ex  sigil.ex  styles.ex  values.ex
lib/folio/codegen/: content_nodes.ex  content_schema.ex  native.ex
native/folio_nif/: Cargo.toml
native/folio_nif/src/: convert.rs  generated_content_nodes.rs  generated_nifs.rs  generated_rustq_sample.rs  lib.rs  math.rs  mdex_bridge.rs  styles.rs  types.rs  world.rs
scripts/: setup-sparse-checkout.sh
test/: dsl_test.exs  folio_test.exs  portfolio_test.exs
