[package]
name = "folio_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "folio_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
typst = { path = "../../typst/crates/typst" }
typst-library = { path = "../../typst/crates/typst-library" }
typst-layout = { path = "../../typst/crates/typst-layout" }
typst-pdf = { path = "../../typst/crates/typst-pdf" }
typst-svg = { path = "../../typst/crates/typst-svg" }
typst-render = { path = "../../typst/crates/typst-render" }
typst-syntax = { path = "../../typst/crates/typst-syntax" }
typst-assets = { version = "0.14", features = ["fonts"] }
comrak = { version = "0.52", default-features = false }
ecow = "0.2"
parking_lot = "0.12"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
